lab1/Test/L1-A-7-6.output
Error Type A at Line 9
Error Type A at Line 20
Error Type A at Line 25
