lab1/Test/L1-A-7-6.cmm
struct mkpi4FUTtKKN1YAfngiY AQVtvquQLzRZNy1CZYMJ , 
  FIKojnhP8m 

;
struct {
}MIhhi ( int mcyj9xQVHRq , int SLyRjn ) {
  int k1fgvNyD3xekn7bIYk ;
  struct fjDFp tYfYDtYRfQLi0lrB ;
  float \v ;
  if ( x ) {
    int r4WNyFPdOy = cTPvTn = nq40Jem7_Qvv0Vo || vloJ52HFUqQgh8R 
      != ! NfLk0M1BmHs1 ( XqFThL7RIBuz1UNzme = xM && y >= 
      wYy7Id_nI6Okc0 + LaSl3x / - tqy6 [ kr < d7MK1Or7fuTo 
      - Z7GgttBjqJxpB2XQ ( whQp8DVL8c , HF - ! ( aAAax1VCX5AygaJ 
      || KYSGHYOI7HCpiQiDh6e == c01O2 + b96 * - vixuwX [ 
      LPsVhXIlSR50 = dUjwqwbAS = BNqWN7MOKKradBq = ji9i8b_ 
      = QOtIwaEHTz6ao8 = AwSpXWYS6kJbooNFo1 <= dOR64STJm 
      ] > 964240725.924757049 . xiM3aepIx6T6c_xdZ4 ) ) / 
      cuFa9U / - 526765119 ] ) . ABGIhy_K * - Su99MNwy5 
      ( ) , %b2gnMBYfYkB3xsQz [ 1648027854 ] ;
  }
}
struct {
  struct HvL0ug {
  }v3rTsr6S :;
};
int ;
int V ( ) {
{
  }  while ( s )   if ( IXuNwOWHgOdn )   my79 ;
else   return fNI_l ;


}
int WuNFl_jKNSh ( ) {
}
int ;
int ;
int ;
int ;
int rCJfzcUvPt1DNL9lQ ( ) {
  nLa1q9eH ;
  CHG ;
  if ( muoUVDBgJbeg )   ux4N8g2LXO0GLI ;
else   if ( uT0Q92JU )   wYPdNCPUyycbL ;


}
int ;
int c2IDperz1qV95mHDtX ( ) {
}
